# PasswordGenerator

./: .gitignore  README.rst  pyproject.toml
src/passwordgenerator/: app.py  buttons.py  password.py
src/passwordgenerator/ui/: main.ui  resources.py  resources.qrc  ui_main.py
src/passwordgenerator/ui/css/: MainWindow.css
tests/: test_passwordgenerator.py
