[tool.poetry]
name = "PasswordGenerator"
version = "0.1.0"
description = ""
authors = ["Glukharev Oleg Anatolyevich <olegglukharev92@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
PySide6 = "^6.3.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Nuitka = "^1.1.3"
zstandard = "^0.18.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
